# babyai

./: pyproject.toml  setup.py
babyai/: arguments.py  bot.py  efficiency.py  evaluate.py  imitation.py  model.py  plotting.py
babyai/levels/: bonus_levels.py  iclr19_levels.py  levelgen.py  test_levels.py  verifier.py
babyai/rl/algos/: base.py  ppo.py
babyai/rl/utils/: supervised_losses.py
babyai/utils/: __init__.py  agent.py  format.py
scripts/: eval_bot.py
